Add index to table and view details to databases

--- a/Mini_DBMS/Mini_DBMS/Mini_DBMS.csproj
+++ b/Mini_DBMS/Mini_DBMS/Mini_DBMS.csproj
@@ -168,8 +168,11 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\customs\addindex.js" />
+    <Content Include="Views\Home\_AddIndex.cshtml" />
     <Resource Include="Helpers\databases.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Resource>
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
