Removed berkleydb from project

--- a/Mini_DBMS/Mini_DBMS/Mini_DBMS.csproj
+++ b/Mini_DBMS/Mini_DBMS/Mini_DBMS.csproj
@@ -49,9 +49,6 @@
     <Reference Include="DBreeze, Version=1.92.2018.1029, Culture=neutral, PublicKeyToken=174b57f1c155f3c6, processorArchitecture=MSIL">
       <HintPath>..\packages\DBreeze.1.92.0\lib\net461\DBreeze.dll</HintPath>
     </Reference>
-    <Reference Include="libdb_dotnet61, Version=6.1.26.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Berkeley.DB.6.1.26\lib\net40\libdb_dotnet61.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -179,8 +176,6 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="libdb61.dll" />
-    <Content Include="libdb_csharp61.dll" />
     <Content Include="Scripts\customs\addForeignKey.js" />
     <Content Include="Scripts\customs\addindex.js" />
     <Content Include="Scripts\customs\addPrimaryKey.js" />
@@ -241,7 +236,9 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
