--- a/Mini_DBMS/Mini_DBMS/Mini_DBMS.csproj
+++ b/Mini_DBMS/Mini_DBMS/Mini_DBMS.csproj
@@ -161,6 +161,8 @@
     <Compile Include="Models\Field.cs" />
     <Compile Include="Models\FieldType.cs" />
     <Compile Include="Models\ForeignKey.cs" />
+    <Compile Include="Models\IndexFile.cs" />
+    <Compile Include="Models\IndexType.cs" />
     <Compile Include="Models\Query.cs" />
     <Compile Include="Models\QueryType.cs" />
     <Compile Include="Models\SimpleQuery.cs" />
