--- a/Mini_DBMS/Mini_DBMS/Mini_DBMS.csproj
+++ b/Mini_DBMS/Mini_DBMS/Mini_DBMS.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\DBreeze\DBreezeOperations.cs" />
     <Compile Include="Helpers\XMLOperation.cs" />
     <Compile Include="Models\AddForeignKeyModel.cs" />
     <Compile Include="Models\Database.cs" />
@@ -231,7 +232,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\static\css\" />
-    <Folder Include="Helpers\DBreeze\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
