--- a/Mini_DBMS/Mini_DBMS/Mini_DBMS.csproj
+++ b/Mini_DBMS/Mini_DBMS/Mini_DBMS.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Helpers\DBreeze\DBreezeOperations.cs" />
     <Compile Include="Helpers\XMLOperation.cs" />
     <Compile Include="Models\AddForeignKeyModel.cs" />
+    <Compile Include="Models\ConditionType.cs" />
     <Compile Include="Models\Database.cs" />
     <Compile Include="Models\Field.cs" />
     <Compile Include="Models\FieldType.cs" />
